--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100vw;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .main-content {
