--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -6,11 +6,13 @@
   height: 85px;
   background: #f8f9fa;
   border-top: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
   display: flex;
   justify-content: space-around;
   z-index: 100;
   box-shadow: 0 -1px 6px rgba(0, 0, 0, 0.04);
-  padding: 0 12px 10px 12px;
+  text-align: center;
+  padding: 0 12px;
 }
 
 .label {
@@ -21,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem 1rem;
+  padding: 0.2rem 1rem;
   border-radius: 4px;
   max-width: 20%;
 }
